cluster/redcloud/apps/mailrise/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailrise
  namespace: mailrise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailrise
  template:
    metadata:
      labels:
        app: mailrise
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
      containers:
        - name: mailrise
          image: yoryan/mailrise:latest
          ports:
            - containerPort: 8025
          resources:
            requests:
              cpu: 150m
              memory: 192Mi
            limits:
              cpu: 375m
              memory: 384Mi
          volumeMounts:
            - name: config
              mountPath: /etc/mailrise.conf
              subPath: mailrise.conf
      volumes:
        - name: config
          configMap:
            name: mailrise-config
