cluster/redcloud/apps/mailrise/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailrise
  namespace: mailrise
spec:
  selector:
    app: mailrise
  ports:
    - protocol: TCP
      port: 8025
      targetPort: 8025
