cluster/redcloud/apps/mailrise/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailrise
  namespace: mailrise
spec:
  entryPoints:
    - mailrise
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailrise
          port: 8025
